[package]
name = "async-which"
version = "0.0.1"
edition = "2021"
authors = ["Bruno Tavares <contato@bltavares.com>"]
repository = "https://github.com/bltavares/async-which.git"
documentation = "https://docs.rs/async-which/"
license = "MIT"
description = "A Rust async equivalent of Unix command \"which\". Locate installed executable in cross platforms."
readme = "README.md"
categories = ["os", "filesystem"]
keywords = ["which", "which-rs", "unix", "command", "async"]

[dependencies]
either = "1.6.1"
libc = "0.2.121"
regex = { version = "1.5.5", optional = true }
# async
tokio = "1.27.0"
tokio-stream = "0.1.8"
async-trait = "0.1.68"
async-stream = "0.3.4"
futures = "0.3.27"

[target.'cfg(windows)'.dependencies]
once_cell = "1"

[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { version = "1.27.0", features = ["rt"] }

[features]
default = ["fs"]
fs = ["tokio/fs", "tokio-stream/fs"]
full = ["fs", "regex"]

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.27.0", features = ["macros"] }
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [".", "cli"]
default-members = ["cli"]