[package]
name = "whichr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["macros"] }
regex = "1.5.4"
futures = "0.3.17"

[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { version = "1.27.0", features = ["rt"] }

[dependencies.async-which]
path = "../"
default-features = false
features = ["regex"]

[features]
default = ["async-which/full", "tokio/rt-multi-thread"]
